# knk

./: .gitignore  022_dimensional_weight.c  03402_sphere.c  034_3_sphere.c  034_4_tax_added.c  034_5_polynomial.c  035_8_interest_rates.c  04904_scanf.c  049_5_scanf.c  049_6_scanf.c  05005_magic_square.c  050_1_date_inputs.c  050_2_product_information.c  050_4_telephone_number.c  051_6_adding_fractions.c  068_1b_operators.c  071_1_reverse_digits.c  071_2_reverse_digits.c  071_4_octal_printf.c  09607_integer_selection_2.c  096_6_upc_validate_check_digit.c  096_7_integer_selection.c  096_8_flight_selection.c  09709_closest_dates.c  09710_grade_names.c  097_11_integer_as_words.c  122_2_denominator.c  12304_broker.c  12308_calendar.c  123_3_lowest_term_fraction.c  123_5_reverse_digits.c  123_7_square3_contrived.c  123_8_calendar.c  123_9_interest_rates.c  124_11_approximation_of_e.c  15702_square_with_continuation.c  15812_calculator.c  158_05_scrabble.c  158_07_fractions_calculator.c  158_08_flight_selection.c  (+65 more)
02000-dimensional-weight/: dimensional_weight.c
033_kr_hello_world/: kr_hello_world.c
03406-polynomial/: polynomial.c
03407_bill_partitioning/: bill_partitioning.c
04902_printf/: printf.c
05003-isbn/: isbn.c
06801a-operators/: operators.c
06801c_operators/: operators.c
06801d_operators/: operators.c
07103_reverse_digits/: reverse_digits.c
07104_octal_arithmetic/: octal_arithmetic.c
07105_upc11/: upc11.c
07106_ean/: ean.c
09501-how-many-digits/: how_many_digits.c
09602-time-format/: time_format.c
09603-broker/: broker.c
09604_beaufort/: beaufort.c
09605_income_tax/: income_tax.c
09711-integer-as-words/: integer_as_words.c
112_progress_bar/: progress_bar.c
12201_largest_int_from_a_series/: largest_int_from_a_series.c
12306_even_squares/: even_squares.c
12410_closest_dates/: closest_dates.c
12412-approximation-of-e-with-tolerance/: approximation_of_e_with_tolerance.c
15701_square/: square.c
15703_sum_doubles/: sum_doubles.c
15704-phone-numbers/: phone_numbers.c
15805_scrabble/: scrabble.c
15806_sizeof/: sizeof.c
15809_time_formats/: time_formats.c
15810_count_vowels/: count_vowels.c
15811_namepart_manipulation/: namepart_manipulation.c
15913-word-length/: word_length.c
15914_newtons_method/: newtons_method.c
16400-reverse/: reverse.c
173_deal/: deal.c
17801-repdigit/: repdigit.c
17802_repdigit/: repdigit.c
17904_reverse/: reverse.c
17906-character-array/: character_array.c
17907-summing-2d-array/: summing_2d_array.c
18010_flight_selection/: flight_selection.c
18011-phone-numbers/: phone_numbers.c
18013-namepart-manipulation/: namepart_manipulation.c
18014_reverse_words/: reverse_words.c
18117_magic_square_of_arbitrary_size/: magic_square_of_arbitrary_size.c
21601-sorting/: sorting.c
21703-random-walk/: random_walk.c
21704_anagrams/: anagrams.c
21705-magic-square/: magic_square.c
21706_polynomial/: polynomial.c
23801_stack/: stack.c
23902_poker/: poker.c
23904-poker-royal-flush/: poker_royal_flush.c
23906_rpn_calculator/: rpn_calculator.c
25503_sum/: sum.c
25505-split-time/: split_time.c
25603-reduce-fraction/: reduce_fraction.c
25604_poker/: poker.c
256_passing_arrays/: passing_arrays.c
27301-pointers/: pointers.c
27302_pointers/: pointers.c
27408_store_zeros/: store_zeros.c
27410_find_middle/: find_middle.c
27411-find-largest/: find_largest.c
27412-find-two-largest/: find_two_largest.c
27413_identity/: identity.c
27502_palindrome/: palindrome.c
27517_sum/: sum.c
27518_evaluate_position/: evaluate_position.c
27605-reverse/: reverse.c
27607-maxmin-pointers/: maxmin_pointers.c
30801_printing_strings/: printing_strings.c
30802-printing-strings/: printing_strings.c
30803_scanf_into_string/: scanf_into_string.c
30804b-readline/: readline.c
30904c_readline/: readline.c
30905a_capitalize_via_indexing/: capitalize_via_indexing.c
30906_censor/: censor.c
30910_stringops/: stringops.c
30911_strcmp_pointers/: strcmp_pointers.c
31013_build_index_url/: build_index_url.c
31014_stringops/: stringops.c
31101_dictionary/: dictionary.c
31102b_remind/: remind.c
31102c-remind/: remind.c
31103_deal/: deal.c
31118_remove_filename/: remove_filename.c
31204-reverse/: reverse.c
31206a_planets/: planets.c
31206c_planets/: planets.c
31208_scrabble/: scrabble.c
31210_namepart_manipulation/: namepart_manipulation.c
31312-reverse-words/: reverse_words.c
31316_string_reversal/: string_reversal.c
31318-dates/: dates.c
34501-preprocessor/: preprocessor.c
34502_preprocessor_nelems/: preprocessor_nelems.c
34503-preprocessor-double/: preprocessor_double.c
34505_preprocessor_side_effects/: preprocessor_side_effects.c
359-reflow/: README.md  buffer.c  reflow  reflow.d
35900-reflow/: buffer.h  quote.txt  reflow.c
35900_reflow/: Makefile
36300_justify/: Makefile  justify.c  line.c  line.h  quote.txt  word.c  word.h
367-makefiles/: Makefile  decrement.c  increment.c  prog.c
36700_makefiles/: decrement.h  globals.h  (+1 more)
45607_remind/: .gitignore  CMakeLists.txt  Makefile  main.c  program
45607_remind/include/vstring/: vstring.h
45607_remind/src/: main.c
50700_gadt_linked_list/test/llist/: CMakeLists.txt  test_llist.c  test_llist__append.c  test_llist__create.c  test_llist__delete.c  test_llist__destroy.c  test_llist__get_length.c  test_llist__insert.c  test_llist__prepend.c
50706_queue_adt_fixed_array/test/queue/: CMakeLists.txt  test_queue__get_capacity.c  test_queue__get_length.c
52501_bitops/: CMakeLists.txt  README.md
52501_bitops/src/: main.c
58819_eolconvert/: CMakeLists.txt  README.md
58819_eolconvert/src/: main.c
template/: .clang-format  CMakeLists.txt  Makefile  README.md  copier.yml  main.c
template/include/lib1/: header1.h
template/src/: main.c
template/template/{{ directory }}/: CMakeLists.txt.jinja  README.md.jinja
template/template/{{ directory }}/src/: main.c.jinja
template/template/{{ project }}/: CMakeLists.txt  README.md.jinja
template/template/{{ project }}/src/: main.c
(+469 files in other folders)
